src/components/common/AppConfigPreview.scss
@import '~@ergeon/core-components/src/components/variables.scss';

.config-preview {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-right: 40px;
  width: 150px;
  height: 150px;
  background-color: $white;
  &__no-preview {
    @include tablet() {
      display: none;
    }
  }
  @include border();

  a {
    text-align: center;
  }

  .preview-image {
    @include border();
    border-color: $white;
    width: 97%;
    height: auto;
  }

  .preview-placeholder {
    width: 24px !important;
  }

  .hidden-img {
    display: none;
  }
}

.gallery-preview {
  background-color: $white;
  display: flex;
  justify-content: left;
  align-items: center;
  width: 100%;
  margin-right: $h-40;
  border: none;
  border-radius: none;

  // increase size of gallery view
  .image-gallery-container {
    width: 150px;

    .image-gallery-thumb {
      .image-loader__wrapper {
        max-height: 144px; // so it can be 150x150
      }
      .image-loader__image {
        height: 150px; // so all images no matter what look 150px
      }
    }
  }
}

// image gallery popup uses dialog component
// this will prevent <hr> to expand as it messes up the UI
.image-gallery-popup {
  .image-gallery-dialog {
    .dialog--content hr {
      width: 0;
    }
  }
}

// swipe gallery fix as height overflows current area on mobile for some reason
.swipe-gallery {
  .image-gallery-image {
    height: unset !important;
  }
}

.mobile-length {
  display: none;

  @include phone() {
    display: block;
  }
}

.desktop-length {
  display: block;

  @include phone() {
    display: none;
  }
}

.quote-line-images {
  .image-loader__wrapper > img {
    height: 400px; // fixed height for pdf mode only as .quote-line-images is only attached on asPDF
  }
}

